2006-05-31  Gautier Portet <kassoulet gmail com>

	* soundconverter.py: Added an error message when we fail to create a
	  gnomevfssrc element.

2006-05-27  Gautier Portet <kassoulet gmail com>

	* soundconverter: Added Spanish translation.

2006-05-27  Gautier Portet  <kassoulet gmail com>

	* soundconverter: Added a custom file pattern choice.
	  (thanks Adolfo)
	  some cleanup.

2006-05-25  Gautier Portet  <kassoulet gmail com>

	* soundconverter.py: Fix problem with set_sensituve().
	  release 0.8.5

2006-05-10  Gautier Portet <kassoulet gmail com>

	* soundconverter.py: Fix doubled folder (#7403).
	  release 0.8.4

2006-04-22  Gautier Portet <kassoulet gmail com>

	* soundconverter.py: Fix an uncatched InvalidURIError when adding files.

2006-03-19  Gautier Portet <kassoulet gmail com>

	* soundconverter.py: File permission are copied from source files now.

2006-03-15  Gautier Portet <kassoulet gmail com>

	* Makefile: Applied Makefile cleanup patch from Lars.
	* soundconverter.glade: Removed preferences and exit toolbar buttons
	  as requested (#6777).

2006-01-21  Gautier Portet <kassoulet gmail com>

	Release 0.8.3
	
	Added Error handling when trying to load files with invalid
	characters...
	
	
	Release 0.8.2

	make install-local #1154
	Pause button #1455

	Unique file #5334
	Folder dropping #5561
	Filtering by mime #5789
	Fixed problem with vbr #5872

	French Translation
	New list display
	UI Changes
	More precise progress bar
	Async tag reading
	Fixed gnomevfs problems with folders


2006-01-21  Gautier Portet <kassoulet gmail com>

	* Makefile: Added translations to build system.
	* fr.po: Updated french translation.
	* soundconverter.glade: Some minors changes.
	* soundconverter.py: Some minors fixes. The UI is now unsensitive
	  when we are converting. Fixed the convert button beiing called
	  when we were unpausing. And that's all!

2006-01-20  Gautier Portet <kassoulet gmail com>

	* soundconverter.py: Fixed the convert/stop buttons, and some more