@@ -1,5 +1,7 @@
 2006-05-31  Gautier Portet <kassoulet gmail com>
 
+	* soundconverter.py: Removed previous fix, and added the possibility to
+	  use filesrc if gnomevfssrc is absent instead.
 	* soundconverter.py: Added an error message when we fail to create a
 	  gnomevfssrc element.
 
